2011-03-25  Andy Estes  <aestes@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION (r70748): latest nightly builds kills AC_QuickTime.js
        https://bugs.webkit.org/show_bug.cgi?id=49016

        Update objectContentType() implementation to handle the
        shouldPreferPlugInsForImages flag.

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::objectContentType):
        * src/FrameLoaderClientImpl.h:

2011-03-25  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        Data race between ~WorkerFileSystemCallbacksBridge and runTasksOnWorkerThread
        https://bugs.webkit.org/show_bug.cgi?id=56138
        Stopped passing the WorkerFileSystemCallbacksBridge's reference to
        MainThreadFileSystemCallbacks so that in most cases (in normal cases)
        its reference is only maintained by WorkerThread.

        * src/WorkerFileSystemCallbacksBridge.cpp:
        (WebKit::MainThreadFileSystemCallbacks::createLeakedPtr):
        (WebKit::MainThreadFileSystemCallbacks::MainThreadFileSystemCallbacks):
        (WebKit::WorkerFileSystemCallbacksBridge::mayPostTaskToWorker):
        * src/WorkerFileSystemCallbacksBridge.h:

2011-03-24  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] Add setters for various client interfaces, and add WebSpellCheckClient
        https://bugs.webkit.org/show_bug.cgi?id=57070

        * public/WebSpellCheckClient.h: Added.
        (WebKit::WebSpellCheckClient::spellCheck):
        (WebKit::WebSpellCheckClient::requestCheckingOfText):
        (WebKit::WebSpellCheckClient::autoCorrectWord):
        (WebKit::WebSpellCheckClient::showSpellingUI):
        (WebKit::WebSpellCheckClient::isShowingSpellingUI):
        (WebKit::WebSpellCheckClient::updateSpellingUIWithMisspelledWord):
        (WebKit::WebSpellCheckClient::~WebSpellCheckClient):
        * public/WebView.h:
        * public/WebViewClient.h: