@@ -1252,7 +1252,7 @@
                         "name": "details",
                         "type": "object",
                         "properties": {
-                            "callFrames": { "type": "array", "items": { "$ref": "CallFrame" }, "description": "Call stack the virtual machine stopped on." },
+                            "callFrames": { "type": "array", "items": { "$ref": "CallFrame" }, "description": "Call stack the virtual machine stopped on." }
                         },
                         "description": "Call stack information."
                     }
